[gd_scene load_steps=4 format=3 uid="uid://c1ed27cda72id"]

[ext_resource type="Script" path="res://WorldSelect.gd" id="1_bv5s7"]
[ext_resource type="Script" path="res://world.gd" id="1_wg58k"]
[ext_resource type="Texture2D" uid="uid://dxegwd7id77rv" path="res://textures/textures/level-select/1.0.00000.png" id="2_0lvkr"]

[node name="World" type="Node2D"]
script = ExtResource("1_wg58k")

[node name="Label" type="Label" parent="."]
offset_left = 393.0
offset_top = 214.0
offset_right = 747.0
offset_bottom = 237.0
text = "[Allan, Please Add Details]"
horizontal_alignment = 1

[node name="1_0_00001" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_0lvkr")
metadata/_edit_lock_ = true

[node name="WorldSelect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 0
expand_mode = 3
script = ExtResource("1_bv5s7")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="1_0_00000" type="Button" parent="."]
offset_left = 324.0
offset_top = 192.0
offset_right = 480.0
offset_bottom = 349.0
text = "1"

[node name="1_1_00000" type="Button" parent="."]
offset_left = 327.0
offset_top = 475.0
offset_right = 481.0
offset_bottom = 630.0
text = "2
"

[node name="1_1_10000" type="Button" parent="."]
offset_left = 327.0
offset_top = 756.0
offset_right = 479.0
offset_bottom = 912.0
text = "3"

[connection signal="pressed" from="1_0_00000" to="." method="_on_1_0_00000_pressed"]
[connection signal="pressed" from="1_1_00000" to="." method="_on_1_1_00002_pressed"]
[connection signal="pressed" from="1_1_10000" to="." method="_on_1_1_10000_pressed"]
